--- a/Hujiahong2/app/src/main/res/layout/main_layout.xml
+++ b/Hujiahong2/app/src/main/res/layout/main_layout.xml
@@ -31,7 +31,7 @@
             android:layout_centerVertical="true"
             />
         <ImageView
-            android:id="@+id/bellow_button"
+            android:id="@+id/bottom_button"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/ic_launcher"
