--- a/Hujiahong2/app/src/main/res/layout/main_layout.xml
+++ b/Hujiahong2/app/src/main/res/layout/main_layout.xml
@@ -2,38 +2,39 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <RelativeLayout
         android:id="@+id/main_button_layout"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_centerInParent="true"
-        >
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
         <ImageView
             android:id="@+id/up_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:src="@drawable/ic_launcher"
             android:layout_centerHorizontal="true"
             />
         <ImageView
-            android:id="@+id/left_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:id="@+id/right_button"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:src="@drawable/ic_launcher"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             />
         <ImageView
-            android:id="@+id/right_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:id="@+id/left_button"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:src="@drawable/ic_launcher"
             android:layout_centerVertical="true"
             />
         <ImageView
             android:id="@+id/bottom_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:src="@drawable/ic_launcher"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
