楼层分布级部门

--- a/Hujiahong2/app/src/main/res/values/styles.xml
+++ b/Hujiahong2/app/src/main/res/values/styles.xml
@@ -7,5 +7,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="userinfo_main_txt">
+        <item name="android:textColor">@color/_666666</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingRight">10dp</item>
+    </style>
 </resources>
