--- a/Hujiahong2/app/src/main/res/layout/main_layout.xml
+++ b/Hujiahong2/app/src/main/res/layout/main_layout.xml
@@ -36,7 +36,16 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/ic_launcher"
-            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="50dp"
+            android:layout_alignParentBottom="true"
+            />
+        <ImageView
+            android:id="@+id/bottom_button2"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/ic_launcher"
+            android:layout_marginRight="50dp"
+           android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             />
 
