--- a/Hujiahong2/app/src/main/res/layout/show_responsibilities.xml
+++ b/Hujiahong2/app/src/main/res/layout/show_responsibilities.xml
@@ -5,5 +5,7 @@
 <TextView
     android:id="@+id/show_word"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:padding="10dp"
+    android:textSize="18sp"/>
 </LinearLayout>
