--- a/Hujiahong2/app/src/main/res/layout/video_layout.xml
+++ b/Hujiahong2/app/src/main/res/layout/video_layout.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000">
+    android:background="#000000"
+    android:id="@+id/back_video">
 
     <com.sina.sinavideo.sdk.VDVideoView
         android:id="@+id/vv1"
