--- a/Hujiahong2/app/src/main/res/layout/floor_distribution.xml
+++ b/Hujiahong2/app/src/main/res/layout/floor_distribution.xml
@@ -5,6 +5,8 @@
     <ImageView
         android:id="@+id/floor_pic"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:src="@mipmap/aaa"/>
 
 </ScrollView>
