更新跟加载图片

--- a/Hujiahong2/app/src/main/res/layout/responsibilities.xml
+++ b/Hujiahong2/app/src/main/res/layout/responsibilities.xml
@@ -7,20 +7,21 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp" >
+        android:padding="20dp" >
         <LinearLayout
             android:id="@+id/bangongshi"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@color/list_item_selector_normal"
             android:gravity="center_vertical"
-            android:padding="10dp" >
+            android:padding="20dp" >
 
             <TextView
                 style="@style/userinfo_main_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/_333333"
+                android:textSize="30sp"
                 android:text="办公室" />
         </LinearLayout>
 
@@ -33,14 +34,15 @@
             android:layout_height="wrap_content"
             android:background="@color/list_item_selector_normal"
             android:gravity="center_vertical"
-            android:padding="10dp" >
+            android:padding="20dp" >
 
             <TextView
                 style="@style/userinfo_main_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/_333333"
-                android:text="政治处" />
+                android:text="政治处"
+                android:textSize="30sp"/>
         </LinearLayout>
 
         <include layout="@layout/list_divider" />
@@ -52,14 +54,15 @@
             android:layout_height="wrap_content"
             android:background="@color/list_item_selector_normal"
             android:gravity="center_vertical"
-            android:padding="10dp" >
+            android:padding="20dp" >
 
             <TextView
                 style="@style/userinfo_main_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/_333333"
-                android:text="侦查监督科" />
+                android:text="侦查监督科"
+                android:textSize="30sp"/>
         </LinearLayout>
 
         <include layout="@layout/list_divider" />
@@ -71,14 +74,15 @@
             android:layout_height="wrap_content"
             android:background="@color/list_item_selector_normal"
             android:gravity="center_vertical"
-            android:padding="10dp" >
+            android:padding="20dp" >
 
             <TextView
                 style="@style/userinfo_main_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/_333333"
-                android:text="公诉科" />
+                android:text="公诉科"
+                android:textSize="30sp"/>
         </LinearLayout>
 
         <include layout="@layout/list_divider" />
@@ -90,14 +94,15 @@
             android:layout_height="wrap_content"
             android:background="@color/list_item_selector_normal"
             android:gravity="center_vertical"
-            android:padding="10dp" >
+            android:padding="20dp" >
 
             <TextView
                 style="@style/userinfo_main_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/_333333"
-                android:text="分反贪污贿赂局" />
+                android:text="分反贪污贿赂局"
+                android:textSize="30sp"/>
         </LinearLayout>
 
         <include layout="@layout/list_divider" />
@@ -108,14 +113,15 @@
             android:layout_height="wrap_content"
             android:background="@color/list_item_selector_normal"
             android:gravity="center_vertical"
-            android:padding="10dp" >
+            android:padding="20dp" >
 
             <TextView
                 style="@style/userinfo_main_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/_333333"
-                android:text="反渎职侵权局" />
+                android:text="反渎职侵权局"
+                android:textSize="30sp"/>
         </LinearLayout>
 
         <include layout="@layout/list_divider" />
@@ -127,14 +133,15 @@
             android:layout_height="wrap_content"
             android:background="@color/list_item_selector_normal"
             android:gravity="center_vertical"
-            android:padding="10dp" >
+            android:padding="20dp" >
 
             <TextView
                 style="@style/userinfo_main_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/_333333"
-                android:text="刑事执行检察局" />
+                android:text="刑事执行检察局"
+                android:textSize="30sp"/>
         </LinearLayout>
 
         <include layout="@layout/list_divider" />
@@ -146,14 +153,15 @@
             android:layout_height="wrap_content"
             android:background="@color/list_item_selector_normal"
             android:gravity="center_vertical"
-            android:padding="10dp" >
+            android:padding="20dp" >
 
             <TextView
                 style="@style/userinfo_main_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/_333333"
-                android:text="控告申诉检察科" />
+                android:text="控告申诉检察科"
+                android:textSize="30sp"/>
         </LinearLayout>
 
         <include layout="@layout/list_divider" />
@@ -165,14 +173,15 @@
             android:layout_height="wrap_content"
             android:background="@color/list_item_selector_normal"
             android:gravity="center_vertical"
-            android:padding="10dp" >
+            android:padding="20dp" >
 
             <TextView
                 style="@style/userinfo_main_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/_333333"
-                android:text="民事行政科" />
+                android:text="民事行政科"
+                android:textSize="30sp"/>
         </LinearLayout>
 
         <include layout="@layout/list_divider" />
@@ -183,14 +192,15 @@
             android:layout_height="wrap_content"
             android:background="@color/list_item_selector_normal"
             android:gravity="center_vertical"
-            android:padding="10dp" >
+            android:padding="20dp" >
 
             <TextView
                 style="@style/userinfo_main_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/_333333"
-                android:text="检查技术科" />
+                android:text="检查技术科"
+                android:textSize="30sp"/>
         </LinearLayout>
 
         <include layout="@layout/list_divider" />
@@ -200,14 +210,15 @@
             android:layout_height="wrap_content"
             android:background="@color/list_item_selector_normal"
             android:gravity="center_vertical"
-            android:padding="10dp" >
+            android:padding="20dp" >
 
             <TextView
                 style="@style/userinfo_main_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/_333333"
-                android:text="法警局" />
+                android:text="法警局"
+                android:textSize="30sp"/>
         </LinearLayout>
 
         <include layout="@layout/list_divider" />
