--- a/Hujiahong2/app/src/main/res/layout/main_layout.xml
+++ b/Hujiahong2/app/src/main/res/layout/main_layout.xml
@@ -5,19 +5,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/home">
-
+    android:id="@+id/main_bg"
+    >
+<ImageView
+    android:id="@+id/home_bg"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:src="@mipmap/home"
+    android:scaleType="fitXY"
+    android:adjustViewBounds="true"
+    />
     <RelativeLayout
         android:id="@+id/main_button_layout"
-        android:layout_width="210dp"
-        android:layout_height="210dp"
+        android:layout_width="610dp"
+        android:layout_height="610dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true">
 
         <LinearLayout
             android:id="@+id/up_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_centerHorizontal="true"
             android:background="@drawable/yellow_circle"
             android:orientation="vertical">
@@ -30,7 +38,7 @@
                 android:gravity="bottom|center_horizontal"
                 android:text="个人"
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="30sp"
 
                 />
 
@@ -41,15 +49,15 @@
                 android:gravity="top|center_horizontal"
                 android:text="愿景"
                 android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:textSize="30sp" />
         </LinearLayout>
 
 
         <LinearLayout
             android:id="@+id/right_button"
 
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/whiteblue_circle"
@@ -64,7 +72,7 @@
                 android:gravity="bottom|center_horizontal"
                 android:text="楼层"
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="30sp"
 
                 />
 
@@ -75,15 +83,15 @@
                 android:gravity="top|center_horizontal"
                 android:text="展示"
                 android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:textSize="30sp" />
         </LinearLayout>
 
 
         <LinearLayout
             android:id="@+id/left_button"
 
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:background="@drawable/red_circle"
@@ -101,7 +109,7 @@
                 android:gravity="bottom|center_horizontal"
                 android:text="领导"
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="30sp"
 
                 />
 
@@ -112,13 +120,13 @@
                 android:gravity="top|center_horizontal"
                 android:text="关怀"
                 android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:textSize="30sp" />
         </LinearLayout>
         <LinearLayout
             android:id="@+id/bottom_button"
 
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:background="@drawable/blue_circle"
             android:orientation="vertical"
 
@@ -135,7 +143,7 @@
                 android:gravity="bottom|center_horizontal"
                 android:text="部门"
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="30sp"
 
                 />
 
@@ -146,12 +154,12 @@
                 android:gravity="top|center_horizontal"
                 android:text="职责"
                 android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:textSize="30sp" />
         </LinearLayout>
         <LinearLayout
             android:id="@+id/bottom_button2"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:background="@drawable/orange_circle"
             android:orientation="vertical"
 
@@ -169,7 +177,7 @@
                 android:gravity="bottom|center_horizontal"
                 android:text="活动"
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="30sp"
 
                 />
 
@@ -180,7 +188,7 @@
                 android:gravity="top|center_horizontal"
                 android:text="展示"
                 android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:textSize="30sp" />
         </LinearLayout>
 
     </RelativeLayout>
