--- a/Hujiahong2/app/src/main/res/layout/video_layout.xml
+++ b/Hujiahong2/app/src/main/res/layout/video_layout.xml
@@ -4,20 +4,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/video_bg"
 
     android:id="@+id/back_video">
+    <ImageView
+        android:id="@+id/video_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@mipmap/video_bg"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        />
 
     <com.sina.sinavideo.sdk.VDVideoView
         android:id="@+id/vv1"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="660dp"
         android:background="#000000"
         app:layerAttrs="@array/only_horizon"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="170dp">
+        android:layout_marginTop="580dp">
     </com.sina.sinavideo.sdk.VDVideoView>
 
 </RelativeLayout>
